@@ -2283,6 +2283,7 @@ $wgMessageStructure = array(
 		'sorbs',
 		'sorbsreason',
 		'sorbs_create_account_reason',
+		'xffblockreason',
 		'cant-block-while-blocked',
 		'cant-see-hidden-user',
 		'ipbblocked',
