@@ -52,6 +52,8 @@ production.
   preview from the edit page.
 * Added EditPage::showStandardInputs:options hook to allow extensions to add
   new fields to the "editOptions" area of the edit form.
+* (bug 23343) Implemented ability to apply IP blocks to the contents of X-Forwarded-For headers
+  by adding a new configuration variable $wgApplyIpBlocksToXff (disabled by default).
 
 === Bug fixes in 1.21 ===
 * (bug 40353) SpecialDoubleRedirect should support interwiki redirects.
